# wapper_logger

./: CMakeLists.txt  Log4cxxLogger.hpp  README.md  logger.hpp
config/: log4cxx.conf
example/: main.cpp  streamlogger.hpp
extend_hpp/: Log4cxxLogger.hpp
